// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metric export list should export all registration attributes when no "select" is provided 1`] = `
{
  "addressCity": "AnotherCity",
  "addressHouseNumber": "2",
  "addressHouseNumberAddition": "",
  "addressPostalCode": "2345AB",
  "addressStreet": "Teststeeg",
  "created": Any<String>,
  "duplicateStatus": "unique",
  "fspName": "Intersolve-visa",
  "fullName": "Anna Hello",
  "id": 2,
  "inclusionScore": 0,
  "lastMessageStatus": Any<String>,
  "maxPayments": null,
  "name": "Anna Hello",
  "paymentAmountMultiplier": 1,
  "paymentCount": 0,
  "paymentCountRemaining": null,
  "personAffectedSequence": "PA #2",
  "phoneNumber": "14155237775",
  "preferredLanguage": "en",
  "programFspConfigurationId": 6,
  "programFspConfigurationLabel": "Visa debit card",
  "programFspConfigurationName": "Intersolve-visa",
  "programId": 3,
  "referenceId": "22e62864557597e0d",
  "scope": "",
  "status": "included",
  "whatsappPhoneNumber": "14155237775",
}
`;

exports[`Metric export list should export all registration attributes when no "select" is provided 2`] = `
{
  "addressCity": "DifferentCity",
  "addressHouseNumber": "3",
  "addressHouseNumberAddition": "B",
  "addressPostalCode": "3456CD",
  "addressStreet": "DifferentStreet",
  "created": Any<String>,
  "duplicateStatus": "unique",
  "fspName": "Intersolve-visa",
  "fullName": "Sophia Johnson",
  "id": 3,
  "inclusionScore": 0,
  "lastMessageStatus": Any<String>,
  "maxPayments": null,
  "name": "Sophia Johnson",
  "paymentAmountMultiplier": 2,
  "paymentCount": 0,
  "paymentCountRemaining": null,
  "personAffectedSequence": "PA #3",
  "phoneNumber": "14155236666",
  "preferredLanguage": "nl",
  "programFspConfigurationId": 6,
  "programFspConfigurationLabel": "Visa debit card",
  "programFspConfigurationName": "Intersolve-visa",
  "programId": 3,
  "referenceId": "43e62864557597e0d",
  "scope": "",
  "status": "new",
  "whatsappPhoneNumber": "14155236666",
}
`;

exports[`Metric export list should export all registration attributes when no "select" is provided 3`] = `
{
  "addressCity": "AnotherCity",
  "addressHouseNumber": "4",
  "addressHouseNumberAddition": "C",
  "addressPostalCode": "4567DE",
  "addressStreet": "AnotherStreet",
  "created": Any<String>,
  "duplicateStatus": "unique",
  "fspName": "Intersolve-visa",
  "fullName": "Luiz Garcia",
  "id": 4,
  "inclusionScore": 0,
  "lastMessageStatus": Any<String>,
  "maxPayments": null,
  "name": "Luiz Garcia",
  "paymentAmountMultiplier": 3,
  "paymentCount": 0,
  "paymentCountRemaining": null,
  "personAffectedSequence": "PA #4",
  "phoneNumber": "14155235555",
  "preferredLanguage": "nl",
  "programFspConfigurationId": 6,
  "programFspConfigurationLabel": "Visa debit card",
  "programFspConfigurationName": "Intersolve-visa",
  "programId": 3,
  "referenceId": "54e62864557597e0d",
  "scope": "",
  "status": "new",
  "whatsappPhoneNumber": "14155235555",
}
`;

exports[`Metric export list should export all registration attributes when no "select" is provided 4`] = `
{
  "addressCity": "",
  "addressHouseNumber": null,
  "addressHouseNumberAddition": "",
  "addressPostalCode": "",
  "addressStreet": "",
  "created": Any<String>,
  "duplicateStatus": "unique",
  "fspName": "Intersolve-voucher-whatsapp",
  "fullName": "Lars Larsson",
  "id": 5,
  "inclusionScore": 0,
  "lastMessageStatus": Any<String>,
  "maxPayments": null,
  "name": "Lars Larsson",
  "paymentAmountMultiplier": 3,
  "paymentCount": 0,
  "paymentCountRemaining": null,
  "personAffectedSequence": "PA #5",
  "phoneNumber": "14155235556",
  "preferredLanguage": "nl",
  "programFspConfigurationId": 5,
  "programFspConfigurationLabel": "Albert Heijn voucher WhatsApp",
  "programFspConfigurationName": "Intersolve-voucher-whatsapp",
  "programId": 3,
  "referenceId": "54e62864557597e034",
  "scope": "",
  "status": "new",
  "whatsappPhoneNumber": "14155235556",
}
`;

exports[`Metric export list should support using "select" to retrieve a specific subset of columns 1`] = `
[
  {
    "fullName": "Juliet Marsh",
    "phoneNumber": "15005550112",
    "referenceId": "reference-id-scoped-kisumu-west-pv",
  },
  {
    "fullName": "Jane Doe",
    "phoneNumber": "15005550111",
    "referenceId": "reference-id-scoped-kisumu-east-pv",
  },
  {
    "fullName": "Sam Winters",
    "phoneNumber": "15005550121",
    "referenceId": "reference-id-scoped-turkana-north-pv",
  },
  {
    "fullName": "Nick Brouwers",
    "phoneNumber": "15005550200",
    "referenceId": "reference-id-not-scoped-pv",
  },
]
`;
